added side and mobile responsive

--- a/index.pug
+++ b/index.pug
@@ -42,7 +42,7 @@ html(lang="en")
                           default
                             td.table-body__column=val
             .content-footer
-              p.content-footer__amount Showing data 1 to 8 of  256K entries
+              p.content-footer__amount Showing data 1 to 8 of 256K entries
               nav
                 ul.content-footer-pagination
                   li
@@ -68,3 +68,67 @@ html(lang="en")
                     a(href="#", class="content-footer__btn") 
                       span >
         .sidebar
+          .logo
+            .logo-wrapper
+              .logo__img
+                include img/icons/site-logo.svg
+              .logo__text Dashboard
+            .logo__version v.01
+          .menu-list-wrapper
+            nav
+              ul.menu-list
+                li
+                  a.menu-list__item
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/key.svg
+                      span.menu-list__text Dashboard
+                li
+                  a.menu-list__item
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/3d-square.svg
+                      span.menu-list__text Product
+                    .menu-list__icon-shevron
+                        include img/icons/shevron-right.svg
+                li
+                  a.menu-list__item.menu-list__item_active
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/user-square.svg
+                      span.menu-list__text Customers
+                    .menu-list__icon-shevron
+                        include img/icons/shevron-right.svg
+                li
+                  a.menu-list__item
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/wallet.svg
+                      span.menu-list__text Income
+                    .menu-list__icon-shevron
+                        include img/icons/shevron-right.svg
+                li
+                  a.menu-list__item
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/discount.svg
+                      span.menu-list__text Promote
+                    .menu-list__icon-shevron
+                        include img/icons/shevron-right.svg
+                li
+                  a.menu-list__item
+                    .menu-text-icon-wrapper
+                      .menu-list__icon
+                        include img/icons/message-question.svg
+                      span.menu-list__text Help
+                    .menu-list__icon-shevron
+                      include img/icons/shevron-right.svg
+          .admin-logo-wrapper
+            .admin-logo
+              .admin-logo__img
+                img(src="../img/admin.png" alt="admin name")
+              .admin-info
+                span.admin-logo__name Evano
+                span.admin-logo__role Project Manager
+        .sidebar-mobile
+          include img/icons/site-logo.svg
