--- a/styles/index.scss
+++ b/styles/index.scss
@@ -395,6 +395,7 @@ body {
 
     .table-wrapper {
         overflow-x: scroll;
+        overflow-y: visible;
     }
 
 
@@ -442,6 +443,7 @@ body {
 @media (max-width: 768px) {
     .container {
         display: flex;
+        justify-content: center;
         gap: 10px;
     }
 
@@ -449,13 +451,25 @@ body {
         display: none;
     }
 
+    // .sidebar {
+    //     position: absolute;
+    //     width: 100%;
+    // }
+
+    .greeting {
+        margin: 0 0 0 auto; 
+    }
+
     .sidebar-mobile {
         display: block;
+        cursor: pointer;
+        position: absolute;
+        left: 10px;
         margin: auto;
     }
 
     .main-wrapper {
-        width: 85%;
+        width: 95%;
         padding: 0;
     }
 } 
